<resources>
    <string name="app_name">ForHealthyLife</string>

    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_community">Community</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="side_menu_title">사용자: </string>
    <string name="side_menu_subtitle">프로필: </string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="side_menu_profile">Profile</string>
    <string name="side_menu_analysis">Weekly Analysis</string>
    <string name="side_menu_notice">Notice</string>
    <string name="side_menu_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
