<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/bottom_menu_home">

    <fragment
        android:id="@+id/bottom_menu_home"
        android:name="com.example.forhealthylife.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

    </fragment>

    <fragment
        android:id="@+id/bottom_menu_schedule"
        android:name="com.example.forhealthylife.ui.dashboard.DashboardFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_dashboard" >

    </fragment>

    <fragment
        android:id="@+id/button_menu_community"
        android:name="com.example.forhealthylife.ui.notifications.NotificationsFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_notifications" >
    </fragment>

</navigation>
